Create landing page layout

--- a/index.html
+++ b/index.html
@@ -3,41 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Website</title>
+    <title>Upcoming Technology Launch</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
             padding: 0;
+            text-align: center;
+            background: url('05 lights.gif') no-repeat center center fixed;
+            background-size: cover;
+            color: #ffffff;
         }
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 1em 0;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px 0;
+        }
+        .logo {
+            width: 150px;
+            height: auto;
         }
         main {
-            padding: 2em;
+            padding: 40px 20px;
+        }
+        .hero img {
+            width: 80%;
+            max-width: 600px;
+            height: auto;
+        }
+        .gif-demo img {
+            width: 80%;
+            max-width: 400px;
+            height: auto;
+        }
+        .investor {
+            margin-top: 40px;
+        }
+        .investor img {
+            width: 200px;
+            height: auto;
         }
         footer {
-            background-color: #f1f1f1;
-            padding: 1em 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 10px 0;
+            font-size: 0.8em;
+        }
+        .contact {
+            margin-top: 40px;
+        }
+        a {
+            color: #ffffff;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Website</h1>
+        <img src="01 FW Logo.png" alt="Company Logo" class="logo">
     </header>
     <main>
-        <p>This is a simple website hosted on GitHub Pages.</p>
-        <p>Feel free to explore and customize it!</p>
+        <h1>Something Big Is Coming</h1>
+        <div class="hero">
+            <img src="04 tech.png" alt="Upcoming Technology">
+        </div>
+        <div class="gif-demo">
+            <img src="03 multi venue.gif" alt="Technology Output Demo">
+        </div>
+        <div class="investor">
+            <img src="02 FUV logo.PNG" alt="Investor Logo">
+            <p>Comprehensive, equity-based support for innovative founders building the future of technology</p>
+        </div>
+        <div class="contact">
+            <h2>Get in Touch</h2>
+            <p><a href="mailto:office@theendofthe.world">office@theendofthe.world</a></p>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2023 My GitHub Website</p>
+        <p>&copy; 2023 Future World. All rights reserved.</p>
     </footer>
 </body>
 </html>
