--- a/index.html
+++ b/index.html
@@ -3,41 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Website</title>
+    <title>Immersive Experiences - downloaded directly to venues</title>
+    
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'andale mono', monospace;
             text-align: center;
-            margin: 0;
-            padding: 0;
+            margin: 300;
+            padding: 300;
+            background-color: #180202;
+            color: #f3eded;
         }
         header {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #b33a94;
+            color: rgb(247, 227, 227);
             padding: 1em 0;
+            background: rgba(0, 0, 0, 0.7);
+        }
+        .logo {
+            width: 150px;
+            height: auto;
         }
         main {
-            padding: 2em;
+            padding: 4px 2px;
+        }
+        .hero-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 2px;
+        }
+        .hero-container img {
+            width: 45%;
+            max-width: 400px;
+            height: auto;
+        }
+        .gif-demo img {
+            width: 80%;
+            max-width: 400px;
+            height: auto;
+        }
+        .investor {
+            margin-top: 4px;
+        }
+        .investor img {
+            width: 400px;
+            height: auto;
+        }
+        .contact {
+            margin-top: 40px;
         }
         footer {
             background-color: #f1f1f1;
             padding: 1em 0;
             position: fixed;
-            bottom: 0;
+            bottom: 100;
             width: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            font-size: 0.10em;
+        }
+        a {
+            color: #ffffff;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Website</h1>
+        <h1>Immersive Experiences - downloaded directly to venues</h1>
+        <img src="01 FW Logo.png" alt="Company Logo" class="logo">
     </header>
     <main>
-        <p>This is a simple website hosted on GitHub Pages.</p>
-        <p>Feel free to explore and customize it!</p>
+        <div class="hero-container">
+            <img src="04 tech.png" alt="Upcoming Technology">
+            <img src="03 multi venue.gif" alt="Lights Image">
+        </div>
+        
+        <div class="investor">
+            <img src="02 FUV logo.PNG" alt="Investor Logo">
+            <p>Comprehensive, equity-based support for innovative founders building the future of technology</p>
+        </div>
+        <div class="contact">
+            <h2>Get in Touch</h2>
+            <p><a href="mailto:office@theendofthe.world">office@theendofthe.world</a></p>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2023 My GitHub Website</p>
+        <p>&copy; 2025 Forever World. All rights reserved.</p>
     </footer>
 </body>
 </html>
