--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Immersive Experiences - downloaded directly to venues</title>
     
+    <!-- Import Google Font Abel -->
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    
     <style>
         body {
-            font-family: 'andale mono', monospace;
+            font-family: 'Abel', sans-serif; /* Updated font-family */
             text-align: center;
-            margin: 300;
-            padding: 300;
-            background-color: #180202;
+            margin: 0;
+            padding: 0;
+            background-color: #000000;
             color: #f3eded;
         }
         header {
@@ -25,13 +28,13 @@
             height: auto;
         }
         main {
-            padding: 4px 2px;
+            padding: 20px 10px;
         }
         .hero-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 2px;
+            gap: 20px;
         }
         .hero-container img {
             width: 45%;
@@ -44,23 +47,33 @@
             height: auto;
         }
         .investor {
-            margin-top: 4px;
+            margin-top: 20px;
+            padding: 20px;
+            border: 2px solid #f3eded; /* Adds a border around the section */
+            display: inline-block; /* Ensures the box wraps tightly around content */
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.1); /* Adds a subtle background color */
         }
         .investor img {
             width: 400px;
             height: auto;
         }
+        .investor p {
+            max-width: 400px; /* Limits text width to match the logo */
+            margin: 0 auto; /* Centers the text within the box */
+        }
         .contact {
-            margin-top: 40px;
+            margin-top: 20px;
+            margin-bottom: 60px; /* Added spacing to prevent overlap with the footer */
         }
         footer {
             background-color: #f1f1f1;
             padding: 1em 0;
             position: fixed;
-            bottom: 100;
+            bottom: 0;
             width: 100%;
             background: rgba(0, 0, 0, 0.7);
-            font-size: 0.10em;
+            font-size: 0.8em;
         }
         a {
             color: #ffffff;
