--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             max-width: 400px;
             height: auto;
         }
+.hero-caption p {
+    max-width: 400px;
+    margin: 10px auto;
+    text-align: center;
+}
         .investor {
             margin-top: 20px;
             padding: 20px;
@@ -90,7 +95,10 @@
             <img src="04 tech.png" alt="Upcoming Technology">
             <img src="03 multi venue.gif" alt="Lights Image">
         </div>
-        
+        <div class="hero-caption">
+    <p>Venue operators instantly download the best, most exciting productions from a digital marketplace. It's a complete rewire of the live entertainment supply chain. It's Netflix for Live Shows.
+Unlocks faster, smarter ways for venues, creators, & audiences to thrive in a projected $600billion market.</p>
+</div>
         <div class="investor">
             <img src="02 FUV logo.PNG" alt="Investor Logo">
             <p>Comprehensive, equity-based support for innovative founders building the future of technology</p>
