--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             height: auto;
         }
 .hero-caption p {
-    max-width: 400px;
+    max-width: 600px;
     margin: 10px auto;
     text-align: center;
 }
@@ -96,8 +96,8 @@
             <img src="03 multi venue.gif" alt="Lights Image">
         </div>
         <div class="hero-caption">
-    <p>Venue operators instantly download the best, most exciting productions from a digital marketplace. It's a complete rewire of the live entertainment supply chain. It's Netflix for Live Shows.
-Unlocks faster, smarter ways for venues, creators, & audiences to thrive in a projected $600billion market.</p>
+    <p>Venue operators download the best, most exciting productions from a digital marketplace. <br>A complete rewire of the live entertainment supply chain. <br>It's Netflix for Live Shows.
+<br>Unlocks faster, smarter ways for venues, creators, & audiences to thrive in a projected $600billion market.</p>
 </div>
         <div class="investor">
             <img src="02 FUV logo.PNG" alt="Investor Logo">
