--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="hero-caption">
     <p>Venue operators download the best, most exciting productions from a digital marketplace. <br>A complete rewire of the live entertainment supply chain. <br>It's Netflix for Live Shows.
-<br>Unlocks faster, smarter ways for venues, creators, & audiences to thrive in a projected $600billion market.</p>
+<br>A faster, smarter way for venues, creators, & audiences to thrive in a projected $600b market.</p>
 </div>
         <div class="investor">
             <img src="02 FUV logo.PNG" alt="Investor Logo">
