--- a/index.html
+++ b/index.html
@@ -1,115 +1,518 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Immersive Experiences - downloaded directly to venues</title>
-    
-    <!-- Import Google Font Abel -->
-    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-    
-    <style>
-        body {
-            font-family: 'Abel', sans-serif; /* Updated font-family */
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: #000000;
-            color: #f3eded;
-        }
-        header {
-            background-color: #b33a94;
-            color: rgb(247, 227, 227);
-            padding: 1em 0;
-            background: rgba(0, 0, 0, 0.7);
-        }
-        .logo {
-            width: 150px;
-            height: auto;
-        }
-        main {
-            padding: 20px 10px;
-        }
-        .hero-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-        }
-        .hero-container img {
-            width: 45%;
-            max-width: 400px;
-            height: auto;
-        }
-        .gif-demo img {
-            width: 80%;
-            max-width: 400px;
-            height: auto;
-        }
-.hero-caption p {
-    max-width: 600px;
-    margin: 10px auto;
-    text-align: center;
+<link href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>IMMERSIVE EXPERIENCES <BR> DOWNLOADED DIRECTLY TO VENUES</title>
+  
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Abel', sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      background-color: #000000;
+      color: #f3eded;
+    }
+    header {
+      background-color: #b33a94;
+      color: rgb(247, 227, 227);
+      padding: 1em 0;
+      background: rgba(0, 0, 0, 0.7);
+    }
+    .logo {
+      width: 150px;
+      height: auto;
+    }
+    main {
+      padding: 20px 10px;
+    }
+    .hero-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+    .hero-container img {
+      width: 45%;
+      max-width: 400px;
+      height: auto;
+    }
+    .gif-demo img {
+      width: 80%;
+      max-width: 400px;
+      height: auto;
+    }
+    .hero-caption p {
+      max-width: 600px;
+      margin: 10px auto;
+      text-align: center;
+    }
+    .investor {
+      margin-top: 20px;
+      padding: 20px;
+      border: 2px solid #f3eded;
+      display: inline-block;
+      text-align: center;
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+    .investor img {
+      width: 400px;
+      height: auto;
+    }
+    .investor p {
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    .contact {
+      margin-top: 20px;
+      margin-bottom: 60px;
+    }
+    footer {
+  position: absolute;
+  bottom: -9999px;
+  visibility: hidden;
 }
-        .investor {
-            margin-top: 20px;
-            padding: 20px;
-            border: 2px solid #f3eded; /* Adds a border around the section */
-            display: inline-block; /* Ensures the box wraps tightly around content */
-            text-align: center;
-            background-color: rgba(0, 0, 0, 0.1); /* Adds a subtle background color */
-        }
-        .investor img {
-            width: 400px;
-            height: auto;
-        }
-        .investor p {
-            max-width: 400px; /* Limits text width to match the logo */
-            margin: 0 auto; /* Centers the text within the box */
-        }
-        .contact {
-            margin-top: 20px;
-            margin-bottom: 60px; /* Added spacing to prevent overlap with the footer */
-        }
-        footer {
-            background-color: #f1f1f1;
-            padding: 1em 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            font-size: 0.8em;
-        }
-        a {
-            color: #ffffff;
-        }
-    </style>
+
+    a {
+      color: #ffffff;
+    }
+
+    /* Game styles */
+   body {
+  font-family: 'Inter', sans-serif;
+}
+
+    canvas {
+      display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+    .dialogue {
+      align-items: center;
+      background-color: rgba(0, 0, 0, .85);
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+      left: 0;
+      opacity: 1;
+      position: fixed;
+      right: 0;
+      text-align: center;
+      top: 0;
+      z-index: 10;
+    }
+    .dialogue--hidden {
+      opacity: 0;
+      transform: translateX(-100vw);
+      transition: opacity 0.3s linear 0s, transform 0s linear 0.3s;
+    }
+    .dialogue__content {
+      max-width: 800px;
+      padding: 18px;
+    }
+    .key {
+      border: 1px solid white;
+      border-radius: 5px;
+      display: inline-block;
+      padding: 0.8em;
+      color: white;
+    }
+    .key--arrow {
+      font-size: 1.8rem;
+      padding: 0.35em 0.1em 0.6em;
+      position: relative;
+      top: 0.05em;
+    }
+    button {
+      border: 1px solid white;
+      border-radius: 5px;
+      padding: 0.8em;
+      background-color: white;
+      color: black;
+      font-size: 1rem;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+    button:hover,
+    button:focus {
+      background-color: black;
+      color: #ff9d00;
+    }
+    .hud {
+      box-sizing: border-box;
+      display: flex;
+      justify-content: flex-start;
+      margin: 0;
+      left: 0;
+      opacity: 1;
+      padding: 1rem;
+      position: fixed;
+      top: 0;
+      transition: opacity 0.07s linear 0.5s;
+      width: 100%;
+      z-index: 5;
+    }
+    .hud--hidden {
+      opacity: 0;
+    }
+  
+.touch-controls {
+  position: fixed;
+  bottom: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+  z-index: 20;
+  pointer-events: auto;
+}
+.touch-controls button {
+  font-family: 'Press Start 2P', sans-serif;
+  font-size: 16px;
+  padding: 20px;
+  background-color: rgba(255,255,255,0.9);
+  border: 2px solid #000;
+  border-radius: 10px;
+  color: black;
+  width: 80px;
+}
+.touch-left {
+  display: flex;
+  gap: 10px;
+}
+.touch-right {
+  display: flex;
+}
+
+</style>
 </head>
+
 <body>
-    <header>
-        <h1>Immersive Experiences - downloaded directly to venues</h1>
-        <img src="01 FW Logo.png" alt="Company Logo" class="logo">
-    </header>
-    <main>
-        <div class="hero-container">
-            <img src="04 tech.png" alt="Upcoming Technology">
-            <img src="03 multi venue.gif" alt="Lights Image">
-        </div>
-        <div class="hero-caption">
-    <p>Venue operators download the best, most exciting productions from a digital marketplace. <br>A complete rewire of the live entertainment supply chain. <br>It's Netflix for Live Shows.
-<br>A faster, smarter way for venues, creators, & audiences to thrive in a projected $600b market.</p>
+  <header>
+    <h1>IMMERSIVE EXPERIENCES <BR>DOWNLOADED DIRECTLY TO VENUES</h1>
+    <img src="01 FW Logo.png" alt="Company Logo" class="logo">
+  </header>
+
+  <main>
+    <div class="hero-container">
+      <img src="04 tech.png" alt="Upcoming Technology">
+      <img src="03 multi venue.gif" alt="Lights Image">
+    </div>
+    <div class="hero-caption">
+      <p>
+       COMPLETE REWIRE OF LIVE ENTERTAINMENT SUPPLY CHAIN <br> <br>
+        FASTER, SMARTER WAY FOR VENUES, CREATIVES & AUDIENCES TO THRIVE IN $600B MARKET<br> <br>
+       NETFLIX FOR LIVE ENTERTAINMENT
+      </p>
+    </div>
+    <div class="investor">
+      <img src="02 FUV logo.PNG" alt="Investor Logo">
+      <p>Comprehensive, equity-based support for innovative founders building the future of technology</p>
+    </div>
+    <div class="contact">
+      <h2>Get in Touch</h2>
+      <p><a href="mailto:office@theendofthe.world">office@theendofthe.world</a></p>
+    </div>
+
+    <!-- Game markup -->
+    <div class="dialogue">
+      <div class="dialogue__content">
+        <h1>OTHERS STREAM TO SCREENS<br>WE STREAM TO STAGES</h1>
+                <button>ENTER</button>
+      </div>
+    </div>
+    <ul class="hud hud--hidden">
+      <li class="hud__score">Score: <span>0</span></li>
+    </ul>
+  
+<div class="touch-controls">
+  <div class="touch-left">
+    <button id="left">&#8592;</button>
+    <button id="right">&#8594;</button>
+  </div>
+  <div class="touch-right">
+    <button id="fire">FIRE</button>
+  </div>
 </div>
-        <div class="investor">
-            <img src="02 FUV logo.PNG" alt="Investor Logo">
-            <p>Comprehensive, equity-based support for innovative founders building the future of technology</p>
-        </div>
-        <div class="contact">
-            <h2>Get in Touch</h2>
-            <p><a href="mailto:office@theendofthe.world">office@theendofthe.world</a></p>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2025 Forever World. All rights reserved.</p>
-    </footer>
+
+</main>
+
+  <footer>
+    <p>&copy; 2025 Forever World. All rights reserved.</p>
+  </footer>
+
+  <script>
+    const DEV_MODE = false;
+    const stage = document.createElement('canvas'),
+          ctx = stage.getContext('2d'),
+          dialogue = document.querySelector('.dialogue'),
+          startBtn = dialogue.querySelector('button'),
+          hud = document.querySelector('.hud'),
+          scoreNode = hud.querySelector('.hud__score span');
+
+    let ship, lasers = [], enemies = [],
+        playing = false,
+        gameStarted = false,
+        speedMultiplier,
+        enemySeedFrameInterval,
+        score = 0,
+        tick = 0,
+        laserTick = 0;
+
+    function randomBetween(min, max) {
+      return Math.floor(Math.random() * (max - min + 1)) + min;
+    }
+
+    function calcScore(x) {
+      return Math.floor((1 / x) * 500);
+    }
+
+    function Ship(options) {
+      this.radius = 15;
+      this.x = options.x || stage.width * .5 - this.radius - .5;
+      this.y = stage.height - this.radius - 510; // adds 80px buffer for footer
+      this.width = this.radius * 2;
+      this.height = this.width;
+      this.color = options.color || 'red';
+      this.left = false;
+      this.right = false;
+      this.speed = 10;
+      this.active = true;
+
+      document.addEventListener('keydown', this.onKeyDown.bind(this));
+      document.addEventListener('keyup', this.onKeyUp.bind(this));
+    }
+
+    Ship.prototype.update = function(x) {
+      this.x = x;
+      this.y = stage.height - this.radius - 30;
+    }
+
+    Ship.prototype.draw = function() {
+      ctx.save();
+      ctx.fillStyle = this.color;
+      ctx.fillRect(this.x + this.radius - 5, this.y, 10, this.radius);
+      ctx.fillRect(this.x, this.y + this.radius, this.width, 10);
+      ctx.fillRect(this.x, this.y + this.radius + 10, 10, 5);
+      ctx.fillRect(this.x + this.width - 10, this.y + this.radius + 10, 10, 5);
+      ctx.restore();
+    }
+
+    Ship.prototype.onKeyDown = function(e) {
+      if (ship.active) {
+        if (e.keyCode === 39) this.right = true;
+        else if (e.keyCode === 37) this.left = true;
+        if (e.keyCode == 32 && !this.shooting) {
+          this.shooting = true;
+          laserTick = 0;
+        }
+      }
+    }
+
+    Ship.prototype.onKeyUp = function(e) {
+      if (e.key === 'ArrowRight') this.right = false;
+      else if (e.key === 'ArrowLeft') this.left = false;
+      else if (e.keyCode == 32) this.shooting = false;
+    }
+
+    function Laser(options) {
+      this.x = options.x - .5;
+      this.y = options.y || stage.height - 50;
+      this.width = 6;
+      this.height = 20;
+      this.speed = 15;
+      this.color = options.color || 'white';
+      this.active = true;
+    }
+
+    Laser.prototype.update = function(y) {
+      this.y = y;
+    }
+
+    Laser.prototype.draw = function() {
+      ctx.save();
+      ctx.fillStyle = this.color;
+      ctx.fillRect(this.x, this.y, this.width, this.height);
+      ctx.restore();
+    }
+
+    function Enemy(options) {
+      this.radius = randomBetween(10, 40);
+      this.width = this.radius * 2;
+      this.height = this.width;
+      this.x = randomBetween(0, stage.width - this.width);
+      this.y = 0;
+      this.color = options && options.color ? options.color : 'white';
+      this.speed = 2;
+      this.active = true;
+    }
+
+    Enemy.prototype.update = function(x, y) {
+      this.x = x;
+      this.y = y;
+    }
+
+    Enemy.prototype.draw = function() {
+      ctx.save();
+      ctx.fillStyle = this.color;
+      ctx.beginPath();
+      ctx.arc(this.x + this.radius, this.y + this.radius, this.radius, 0, Math.PI * 2);
+      ctx.fill();
+      ctx.restore();
+    }
+
+    function hitTest(item1, item2) {
+      return !(item1.x > item2.x + item2.width ||
+               item1.y > item2.y + item2.height ||
+               item2.x > item1.x + item1.width ||
+               item2.y > item1.y + item1.height);
+    }
+
+    function handleLaserCollision() {
+      for (let enemy of enemies) {
+        for (let laser of lasers) {
+          if (hitTest(laser, enemy) && laser.active) {
+            enemy.active = false;
+            laser.active = false;
+            speedMultiplier += .025;
+            if (enemySeedFrameInterval > 20) enemySeedFrameInterval -= 2;
+            score += calcScore(enemy.radius);
+            scoreNode.textContent = score;
+          }
+        }
+      }
+    }
+
+    function handleShipCollision() {
+      for (let enemy of enemies) {
+        if (hitTest(ship, enemy)) {
+          ship.active = false;
+          setTimeout(() => {
+            ship.active = true;
+            speedMultiplier = 1;
+            enemySeedFrameInterval = 100;
+            score = 0;
+            scoreNode.textContent = score;
+          }, 2000);
+        }
+      }
+    }
+
+    function drawShip(x) {
+      if (ship.active) {
+        ship.update(x);
+        ship.draw();
+      }
+    }
+
+    function drawEnemies() {
+      for (let enemy of enemies) {
+        if (enemy.active) {
+          enemy.update(enemy.x, enemy.y += enemy.speed * speedMultiplier);
+          enemy.draw();
+        }
+      }
+    }
+
+    function enemyCleanup() {
+      enemies = enemies.filter(e => e.y < stage.height + e.width && e.active);
+    }
+
+    function drawLasers() {
+      for (let laser of lasers) {
+        if (laser.active) {
+          laser.update(laser.y -= laser.speed);
+          laser.draw();
+        }
+      }
+    }
+
+    function laserCleanup() {
+      lasers = lasers.filter(l => l.y > -l.height && l.active);
+    }
+
+    function render() {
+      if (playing) {
+        let xPos = ship.x;
+        if (tick % enemySeedFrameInterval === 0 && ship.active) enemies.push(new Enemy());
+        ctx.fillStyle = '#000';
+        ctx.fillRect(0, 0, stage.width, stage.height);
+        if (ship.left) xPos = ship.x -= ship.speed;
+        else if (ship.right) xPos = ship.x += ship.speed;
+        if (gameStarted) {
+          if (xPos < 0) xPos = 0;
+          else if (xPos > stage.width - ship.width) xPos = stage.width - ship.width;
+        }
+        if (ship.active && ship.shooting && (laserTick === 0 || laserTick % 10 === 0)) {
+          lasers.push(new Laser({ color: 'skyblue', x: ship.x + ship.radius - 3 }));
+        }
+        drawShip(xPos);
+        handleShipCollision();
+        handleLaserCollision();
+        drawLasers();
+        drawEnemies();
+        enemyCleanup();
+        laserCleanup();
+        if (ship.shooting) laserTick++;
+        tick++;
+      }
+      requestAnimationFrame(render);
+    }
+
+    function startGame(e) {
+      dialogue.classList.add('dialogue--hidden');
+      hud.classList.remove('hud--hidden');
+      e.currentTarget.blur();
+      speedMultiplier = 1;
+      enemySeedFrameInterval = 100;
+      ship.x = stage.width * .5 - ship.radius - .5;
+      ship.y = stage.height - ship.radius - 30;
+      enemies = [];
+      gameStarted = true;
+    }
+
+    function onResize() {
+      stage.width = window.innerWidth;
+      stage.height = window.innerHeight;
+    }
+
+    startBtn.addEventListener('click', startGame);
+    window.addEventListener('resize', onResize);
+    document.body.appendChild(stage);
+    onResize();
+    ship = new Ship({ color:'#ff9d00', x: -100 });
+    speedMultiplier = 6;
+    enemySeedFrameInterval = 20;
+    playing = true;
+    render();
+  </script>
+
+<script>
+  const leftBtn = document.getElementById("left");
+  const rightBtn = document.getElementById("right");
+  const fireBtn = document.getElementById("fire");
+
+  leftBtn.addEventListener("touchstart", () => ship.left = true);
+  leftBtn.addEventListener("touchend", () => ship.left = false);
+  rightBtn.addEventListener("touchstart", () => ship.right = true);
+  rightBtn.addEventListener("touchend", () => ship.right = false);
+  fireBtn.addEventListener("touchstart", () => {
+    ship.shooting = true;
+    laserTick = 0;
+  });
+  fireBtn.addEventListener("touchend", () => {
+    ship.shooting = false;
+  });
+</script>
+
 </body>
 </html>
