--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- ────────── HERO (video background) ────────── -->
   <section class="relative flex-1 flex items-center justify-center text-center px-6 pt-24">
     <!-- ① Added id so we can easily target the element in JS -->
-    <video id="heroVideo" src="assets/urgc.mp4" autoplay muted loop playsinline preload="metadata"
+    <video id="heroVideo" src="assets/rbbw.mp4" autoplay muted loop playsinline preload="metadata"
            class="absolute inset-0 w-full h-full object-cover -z-10"></video>
     <div class="absolute inset-0 bg-black/60 -z-10"></div>
 
