--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
           body: new URLSearchParams({ email })
         });
-        window.location.href = 'netflix.html';
+        window.location.href = 'experiences.html';
       }catch{
         alert('Sorry, something went wrong. Please try again later.');
       }
