--- a/experiences.html
+++ b/experiences.html
@@ -63,7 +63,7 @@
 
       <!-- TTM -->
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/TTM.mp4">
-        <img src="assets/ttm.JPG" alt="Twisted Time Machine"
+        <img src="assets/ttm.jpg" alt="Twisted Time Machine"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
         <video src="assets/TTM.mp4" muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
