--- a/experiences.html
+++ b/experiences.html
@@ -106,7 +106,7 @@
 
             <!-- SNOOZEFEST -->
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/SNZF.mp4">
-        <img src="assets/SNOOZEFESTSQ.PNG" alt="Snoozefest Pajama Party"
+        <img src="assets/SNOOZEFESTSQ.png" alt="Snoozefest Pajama Party"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
         <video src="assets/SNZF.mp4" muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
