--- a/experiences.html
+++ b/experiences.html
@@ -140,7 +140,7 @@
 
 <!-- PERFECT PANEL -->
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/URGC.mp4">
-        <img src="assets/panels.png" alt="Placeholder 2"
+        <img src="assets/PANELS.png" alt="Placeholder 2"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
         <video src="assets/keynote.mp4" muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
