--- a/experiences.html
+++ b/experiences.html
@@ -81,7 +81,7 @@
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/rb.mp4">
         <img src="assets/catface.png" alt="Rebel Bingo"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/catface.mp4" muted loop playsinline
+        <video src="assets/CatFace.mp4" muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
@@ -113,10 +113,10 @@
       </div>
 
 <!-- HOEDOWN -->
-      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/URGC.mp4">
+      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/Urgc.mp4">
         <img src="assets/hoedown.png" alt="Placeholder 2"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/URGC.mp4" muted loop playsinline
+        <video src="assets/Urgc.mp4" muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
     </div> 
