--- a/experiences.html
+++ b/experiences.html
@@ -89,7 +89,7 @@
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/rb.mp4">
         <img src="assets/lycra.png" alt="Lycra 80s Party"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/lycra.mp4" muted loop playsinline
+        <video src="assets/Lycra.mp4" muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
