--- a/experiences.html
+++ b/experiences.html
@@ -116,7 +116,7 @@
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/Urgc.mp4">
         <img src="assets/hoedown.png" alt="Placeholder 2"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/Urgc.mp4" muted loop playsinline
+        <video src="assets/hoedown.mp4" muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
     </div> 
