--- a/experiences.html
+++ b/experiences.html
@@ -54,10 +54,10 @@
       </div>
 
       <!-- URGC -->
-      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/URGC.mp4">
+      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/Urgc.mp4">
         <img src="assets/urgc.jpg" alt="Underground Rebel Gameshow"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/URGC.mp4" muted loop playsinline
+        <video src="assets/Urgc.mp4" muted loop playsinline
                class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
@@ -78,7 +78,7 @@
       </div>
 
  <!-- Cat Face -->
-      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/rb.mp4">
+      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/CatFace.mp4">
         <img src="assets/catface.png" alt="Rebel Bingo"
              class="w-full aspect-square object-cover rounded-xl" loading="lazy">
         <video src="assets/CatFace.mp4" muted loop playsinline
